--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,77 +1,87 @@
-html, body {
+html,
+body {
     font-family: "Rubik", sans-serif;
     background-color: rgb(255, 255, 255);
     scroll-behavior: smooth;
-  }
-    nav .active-link {
-      color: #EF4444;
-    }
-  
-    div > .swiper-container > .swiper-pagination {
-        left: auto;
-        right: 25px;
-        width: fit-content;
-    }
+}
 
-    .w-fit {
-      width: fit-content;
-    }
-  
-    .header-s img, .news-s img, .dir-card-bottom img, .dir-cards-con-bottom img, .decoration img, nav img{
-        width: 100%;
-        height: 100%;
-    }
+.swiper-wrapper {
+    max-width: 600px;
+}
+nav .active-link {
+    color: #ef4444;
+}
 
-    video {
-        width: 100%;
-        height: 100%;
-    }
+div > .swiper-container > .swiper-pagination {
+    left: auto;
+    right: 25px;
+    width: fit-content;
+}
 
-    .dc-img-con img {
-      width: 100%;
-    }
-  
-    .partners-img-con {
-      width: 150px;
-      height: 150px;
-    }
-    .partners-img-con img {
-      margin: auto;
-    }
-  
-    div .swiper-pagination .swiper-pagination-bullet-active {
-      background-color: #e53e3e;
-    }
-  /* navigation 
+.w-fit {
+    width: fit-content;
+}
+
+.header-s img,
+.news-s img,
+.dir-card-bottom img,
+.dir-cards-con-bottom img,
+.decoration img,
+nav img {
+    width: 100%;
+    height: 100%;
+}
+
+video {
+    width: 100%;
+    height: 100%;
+}
+
+.dc-img-con img {
+    width: 100%;
+}
+
+.partners-img-con {
+    width: 150px;
+    height: 150px;
+}
+.partners-img-con img {
+    margin: auto;
+}
+
+div .swiper-pagination .swiper-pagination-bullet-active {
+    background-color: #e53e3e;
+}
+/* navigation 
    - show navigation always on the large screen devices with (min-width:1024)
   */
-  @media (min-width: 1024px) {
+@media (min-width: 1024px) {
     .top-navbar {
-      display: inline-flex !important;
+        display: inline-flex !important;
     }
-  }
+}
 
-  @media (min-width: 768px) {
-    .swiper-container .ad-text-con{
-      height: 125px;
+@media (min-width: 768px) {
+    .swiper-container .ad-text-con {
+        height: 125px;
     }
 
     .swiper-slide::after {
-      content: '';
-      position: absolute;
-      z-index: 2;
-      background-color: rgb(0, 0, 0);
-      opacity: 0.5;
-      width: 100%;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      height: 130px;
+        content: "";
+        position: absolute;
+        z-index: 2;
+        background-color: rgb(0, 0, 0);
+        opacity: 0.5;
+        width: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 130px;
     }
-  }
+}
 
-  @media (min-width: 1024px) {
+@media (min-width: 1024px) {
     .grid-rows-7 {
-      grid-template-rows: repeat(7, minmax(0, 1fr));
+        grid-template-rows: repeat(7, minmax(0, 1fr));
     }
-  }
+}
